[gd_scene load_steps=25 format=2]

[ext_resource path="res://OnFootAssets/Enemies/WanderController.tscn" type="PackedScene" id=1]
[ext_resource path="res://OnFootAssets/Stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://OnFootAssets/Hitboxes-Hurtboxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://OnFootAssets/Hitboxes-Hurtboxes/SoftCollision.tscn" type="PackedScene" id=4]
[ext_resource path="res://OnFootAssets/Hitboxes-Hurtboxes/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://OnFootAssets/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://OnFootAssets/Enemies/Round/Eye0.gd" type="Script" id=7]
[ext_resource path="res://Round.gd" type="Script" id=8]
[ext_resource path="res://OnFootAssets/Enemies/Round/RoundShadows.png" type="Texture" id=9]
[ext_resource path="res://OnFootAssets/Enemies/Round/RoundBody.png" type="Texture" id=10]
[ext_resource path="res://OnFootAssets/Enemies/Round/RoundCrystals.png" type="Texture" id=11]
[ext_resource path="res://OnFootAssets/Enemies/Round/SmoothScale.tres" type="Material" id=12]
[ext_resource path="res://OnFootAssets/Enemies/Round/RoundEye.png" type="Texture" id=13]

[sub_resource type="CircleShape2D" id=3]
radius = 170.898

[sub_resource type="CircleShape2D" id=5]
radius = 60.208

[sub_resource type="Animation" id=9]
resource_name = "Crystals"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Crystals8:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 0.9, 0.9 ), Vector2( 0.8, 0.8 ), Vector2( 0.7, 0.7 ), Vector2( 0.8, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Crystals7:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 0.9, 0.9 ), Vector2( 0.8, 0.8 ), Vector2( 0.7, 0.7 ), Vector2( 0.8, 0.8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Crystals6:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 0.9, 0.9 ), Vector2( 0.8, 0.8 ), Vector2( 0.7, 0.7 ), Vector2( 0.8, 0.8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Crystals5:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 0.9, 0.9 ), Vector2( 0.8, 0.8 ), Vector2( 0.7, 0.7 ), Vector2( 0.8, 0.8 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Crystals4:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 0.9, 0.9 ), Vector2( 0.8, 0.8 ), Vector2( 0.7, 0.7 ), Vector2( 0.8, 0.8 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Crystals3:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 0.9, 0.9 ), Vector2( 0.8, 0.8 ), Vector2( 0.7, 0.7 ), Vector2( 0.8, 0.8 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Crystals2:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 0.9, 0.9 ), Vector2( 0.8, 0.8 ), Vector2( 0.7, 0.7 ), Vector2( 0.8, 0.8 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Crystals1:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 0.9, 0.9 ), Vector2( 0.8, 0.8 ), Vector2( 0.7, 0.7 ), Vector2( 0.8, 0.8 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Crystals0:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 0.9, 0.9 ), Vector2( 0.8, 0.8 ), Vector2( 0.7, 0.7 ), Vector2( 0.8, 0.8 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "MoveLeft"
tracks/0/type = "value"
tracks/0/path = NodePath("Body0:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "MoveRight"
tracks/0/type = "value"
tracks/0/path = NodePath("Body0:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body0:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Crystals8:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Crystals7:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Crystals6:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Crystals5:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Crystals4:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Crystals3:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Crystals2:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Crystals1:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Crystals0:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "EyeOpen"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body0/Eye0:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body0/Eye0:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 75.0

[sub_resource type="CircleShape2D" id=4]
radius = 75.0417

[sub_resource type="CircleShape2D" id=1]
radius = 72.5431

[node name="Round" type="KinematicBody2D"]
position = Vector2( 0, -30 )
scale = Vector2( 0.4, 0.4 )
collision_layer = 17
script = ExtResource( 8 )
map_size = 200

[node name="Body0" type="Sprite" parent="."]
texture = ExtResource( 10 )

[node name="DeathTween" type="Tween" parent="Body0"]

[node name="Eye0" type="Sprite" parent="Body0"]
texture = ExtResource( 13 )
hframes = 6
script = ExtResource( 7 )

[node name="Stats" parent="." instance=ExtResource( 2 )]
harvest_duration = 10.0
max_health = 15

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
visible = false

[node name="DetectionArea" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 3 )

[node name="SoftCollision" parent="." instance=ExtResource( 4 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 5 )

[node name="WanderController" parent="." instance=ExtResource( 1 )]
visible = false
wander_range = 500

[node name="CrystalAnimator" type="AnimationPlayer" parent="."]
autoplay = "Crystals"
anims/Crystals = SubResource( 9 )
anims/MoveLeft = SubResource( 6 )
anims/MoveRight = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="Body8" type="Sprite" parent="."]
texture = ExtResource( 10 )

[node name="DeathTween" type="Tween" parent="Body8"]

[node name="Eye8" type="Sprite" parent="Body8"]
texture = ExtResource( 13 )
hframes = 6

[node name="Body1" type="Sprite" parent="."]
texture = ExtResource( 10 )

[node name="DeathTween" type="Tween" parent="Body1"]

[node name="Eye1" type="Sprite" parent="Body1"]
texture = ExtResource( 13 )
hframes = 6

[node name="Body2" type="Sprite" parent="."]
texture = ExtResource( 10 )

[node name="DeathTween" type="Tween" parent="Body2"]

[node name="Eye2" type="Sprite" parent="Body2"]
texture = ExtResource( 13 )
hframes = 6

[node name="Body3" type="Sprite" parent="."]
texture = ExtResource( 10 )

[node name="DeathTween" type="Tween" parent="Body3"]

[node name="Eye3" type="Sprite" parent="Body3"]
texture = ExtResource( 13 )
hframes = 6

[node name="Body4" type="Sprite" parent="."]
texture = ExtResource( 10 )

[node name="DeathTween" type="Tween" parent="Body4"]

[node name="Eye4" type="Sprite" parent="Body4"]
texture = ExtResource( 13 )
hframes = 6

[node name="Body5" type="Sprite" parent="."]
texture = ExtResource( 10 )

[node name="DeathTween" type="Tween" parent="Body5"]

[node name="Eye5" type="Sprite" parent="Body5"]
texture = ExtResource( 13 )
hframes = 6

[node name="Body6" type="Sprite" parent="."]
texture = ExtResource( 10 )

[node name="DeathTween" type="Tween" parent="Body6"]

[node name="Eye6" type="Sprite" parent="Body6"]
texture = ExtResource( 13 )
hframes = 6

[node name="Body7" type="Sprite" parent="."]
texture = ExtResource( 10 )

[node name="DeathTween" type="Tween" parent="Body7"]

[node name="Eye7" type="Sprite" parent="Body7"]
texture = ExtResource( 13 )
hframes = 6

[node name="ShadowSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.0745098 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )

[node name="DeathTween" type="Tween" parent="ShadowSprite"]

[node name="Sprite8" type="Sprite" parent="ShadowSprite"]
texture = ExtResource( 9 )

[node name="DeathTween" type="Tween" parent="ShadowSprite/Sprite8"]

[node name="Sprite1" type="Sprite" parent="ShadowSprite"]
texture = ExtResource( 9 )

[node name="DeathTween" type="Tween" parent="ShadowSprite/Sprite1"]

[node name="Sprite2" type="Sprite" parent="ShadowSprite"]
texture = ExtResource( 9 )

[node name="DeathTween" type="Tween" parent="ShadowSprite/Sprite2"]

[node name="Sprite3" type="Sprite" parent="ShadowSprite"]
texture = ExtResource( 9 )

[node name="DeathTween" type="Tween" parent="ShadowSprite/Sprite3"]

[node name="Sprite4" type="Sprite" parent="ShadowSprite"]
texture = ExtResource( 9 )

[node name="DeathTween" type="Tween" parent="ShadowSprite/Sprite4"]

[node name="Sprite5" type="Sprite" parent="ShadowSprite"]
texture = ExtResource( 9 )

[node name="DeathTween" type="Tween" parent="ShadowSprite/Sprite5"]

[node name="Sprite6" type="Sprite" parent="ShadowSprite"]
texture = ExtResource( 9 )

[node name="DeathTween" type="Tween" parent="ShadowSprite/Sprite6"]

[node name="Sprite7" type="Sprite" parent="ShadowSprite"]
texture = ExtResource( 9 )

[node name="DeathTween" type="Tween" parent="ShadowSprite/Sprite7"]

[node name="Crystals8" type="Sprite" parent="."]
material = ExtResource( 12 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 11 )

[node name="DeathTween" type="Tween" parent="Crystals8"]

[node name="Crystals7" type="Sprite" parent="."]
material = ExtResource( 12 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 11 )

[node name="DeathTween" type="Tween" parent="Crystals7"]

[node name="Crystals6" type="Sprite" parent="."]
material = ExtResource( 12 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 11 )

[node name="DeathTween" type="Tween" parent="Crystals6"]

[node name="Crystals5" type="Sprite" parent="."]
material = ExtResource( 12 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 11 )

[node name="DeathTween" type="Tween" parent="Crystals5"]

[node name="Crystals4" type="Sprite" parent="."]
material = ExtResource( 12 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 11 )

[node name="DeathTween" type="Tween" parent="Crystals4"]

[node name="Crystals3" type="Sprite" parent="."]
material = ExtResource( 12 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 11 )

[node name="DeathTween" type="Tween" parent="Crystals3"]

[node name="Crystals2" type="Sprite" parent="."]
material = ExtResource( 12 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 11 )

[node name="DeathTween" type="Tween" parent="Crystals2"]

[node name="Crystals1" type="Sprite" parent="."]
material = ExtResource( 12 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 11 )

[node name="DeathTween" type="Tween" parent="Crystals1"]

[node name="Crystals0" type="Sprite" parent="."]
material = ExtResource( 12 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 11 )

[node name="DeathTween" type="Tween" parent="Crystals0"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/EyeOpen = SubResource( 10 )
anims/RESET = SubResource( 11 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
visible = false
collision_mask = 4
damage = 10

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[connection signal="frame_changed" from="Body0/Eye0" to="Body0/Eye0" method="_on_Eye0_frame_changed"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="PlayerDetectionZone"]
[editable path="SoftCollision"]
[editable path="Hurtbox"]
[editable path="Hitbox"]
